--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@
     --light-blue: hsl(233, 100%, 69%);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 body {
     font-family: 'Bai Jamjuree', sans-serif;
     font-size: 16px;
